# linear-algebra

./: .gitignore  CMakeLists.txt  build.sh  debug.sh
debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  LinearAlgebra_lib.vcxproj  LinearAlgebra_lib.vcxproj.filters  MatrixGenerator_lib.vcxproj  MatrixGenerator_lib.vcxproj.filters  Matrix_lib.vcxproj  Matrix_lib.vcxproj.filters  ThreadPool_lib.vcxproj  ThreadPool_lib.vcxproj.filters  Vector_lib.vcxproj  Vector_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  linear-algebra.sln  main.vcxproj  main.vcxproj.filters
debug/LinearAlgebra_lib.dir/Debug/: LinearAlgebra_lib.lib.recipe
debug/LinearAlgebra_lib.dir/Debug/LinearAl.33413D37.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
debug/MatrixGenerator_lib.dir/Debug/MatrixGe.7D5DFBC4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MatrixGenerator_lib.lastbuildstate
debug/Matrix_lib.dir/Debug/Matrix_lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
debug/main.dir/Debug/: main.exe.recipe  main.ilk
debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
include/: LinearAlgebra.h  LinearAlgebra.tpp  Matrix.h  Matrix.tpp  MatrixGenerator.h  MatrixGenerator.tpp  RotatedMatrix.h  RotatedMatrix.tpp  ThreadPool.h  Utility.h  Vector.h  Vector.tpp
src/: ThreadPool.cpp  main.cpp
(+23 files in other folders)
